src/static/css/main.scss
@import "bootstrap-variables";
@import "vendors/bootstrap";

@import "base/variables";

// Mixins
@import "mixins/font";
@import "mixins/static";


body {
    @include roboto-light;
}

.top-nav {
    background-color: $color-theme;
    padding: 1.8em 2em;
    > .logo {
        @extend .hidden-xs;
    }

    .social-btn {
        color: #fff;
    }
}

.header {
    background-color: $color-theme;
    color: white;
    .logo {
        margin-bottom: 2em;
    }
}
.slogan {
    font-size: 36px;
    margin-bottom: 2em;
    text-align: center;
}

// schedule

.schedule-wrapper {
    @include make-xs-column(10);
    @include make-xs-column-offset(1);
    @include make-sm-column(12);
    @include make-sm-column-offset(0);
    @include make-md-column(10);
    @include make-md-column-offset(1);
}
.schedule {
    background-color: #fff;
    padding-top: .6em;
    border-radius: 4px;
}

.schedule-block {
    @include make-sm-column(4);
    text-align: center;
    color:#F18F56;
    font-size:24px;
}

// visible in viewport > xs
.schedule__title--lg {
    @include make-sm-column(4);
    @extend .hidden-xs;
    text-align: center;
    color: #ADCDFF;
}

// visible when viewport < xs
.schedule__title {
    @extend .visible-xs-block;
    padding-top: .5em;
}



.quote {
    margin-top: 2em;
    padding-bottom: 2em;
    font-size: 20px;
    color: $color-focus;
    text-align: center;
}

// intro

%intro-block {
    font-family: "Roboto";
    margin-bottom: 4.2em;
}

.intro {
    background: url(static('images/bg_section-intro.svg')) no-repeat;
    background-size: 50% auto;
    background-position: left 0 top -5vw;
    &__heading {
        @include roboto-medium;
        font-size: 36px;
        padding-top: 1.2em;
        padding-bottom: .8em;
    }

    &__body {
        @include roboto-light;
        font-size: 18px;
    }
}


.intro__pycon {
    @extend %intro-block;
    color: #4668D9;
}

.intro__pycontw {
    @include make-md-column(8);
    @include make-md-column-push(4)
    text-align: right;
    color: #F18F56;
    // margin-top: -3em;
    // margin-bottom: 3em;
}

.intro__volunteer {
    @include make-md-column(4);
    @include make-md-column-pull(8)
}


// volunteer block
.volunteer {
    border-radius:4px;
    color: white;
    background-color: #F08E57;
    box-shadow: 0 0 4px 0 rgba(0,0,0,0.35);
    font-size: 18px;

    &__heading {
        font-size: 24px;
        padding: 1em 1.2em .8em;
        background-color: white;
        color: #F08E57;
    }

    &__body {
        padding: 2em 1.2em;
        a{
            color: #fff;
            text-decoration: underline;
        }
        > p {
            margin-bottom: 1.2em;
        }
    }
}


.community {
    border-radius: 5px;
    padding: 1.2em 5% 2em;
    color: white;
    background-color: $color-focus;

    .section__heading {
        color: white;
        text-align: left;
        padding-bottom: 0;
    }

    &__list {
        padding-left: 0;
    }
}

.community__list {
    > li {
        @include make-sm-column(6);
        > a {
            display: block;
            padding-top: .5em;
            padding-bottom: .5em;
            color: white;
        }
    }
    list-style: none;
}

.section.sponsorship {
    margin-top: 6em;
    margin-bottom: 2em;
}

.sponsorship {
    background-color: $color-theme;
    background-repeat: no-repeat;
    background-image: url(static('images/bg_section-sponsorship.svg'));
    background-size: contain;
    background-position: center;
    background-origin: content-box;
    padding-left: 4em;
    padding-right: 4em;
    text-align: center;
    color: white;
    font-size: 18px;
    a {
        color: white;
        text-decoration: underline;
    }
}

@media (max-width: $screen-md) {
    .sponsorship {
        background-image: none;
    }
}

.sponsorship__call {
    border: 4px solid white;
    padding: .3em 1em;
    margin-bottom: 1em;
    border-radius: 10px;
    font-size: 36px;
    color: white;
    background-color: $color-theme;
}

@media (max-width: $screen-sm){
    .schedule{
        padding-top: 0;
    }
    .schedule__title{
        padding-top: 0;
    }
}

@media (max-width: $screen-xs) {
    .sponsorship__call{
        font-size: 28px;
    }
    .sponsorship {
        padding-left: 2em;
        padding-right: 2em;
    }
    .intro__pycontw {
        margin-top: -4em;
        margin-bottom: 4em;
    }
    .intro__volunteer{
        margin-bottom: -4em;
    }
    .community{
        margin-bottom: -4em;
    }
    .slogan {
        font-size: 30px;
    }
}

.section {
    padding-top: 3em;
    padding-bottom: 3em;
    font-size: 18px;

    &__heading {
        @include roboto-medium();
        margin-bottom: 1em;
        color: $color-theme;
        text-align: center;
    }
}



.conf {
    background: url(static('images/bg_section-conf.svg')) no-repeat;
    background-size: 50% auto;
    background-position: right 0 bottom 20vw;
}

$keynote-speaker-photo-size: 90px;
// keynote-speaker
.keynote-speaker {
    @include make-xs-column(10);
    @include make-xs-column-offset(1);
    @include make-md-column(8);
    @include make-md-column-offset(2);
    margin-top: 80px;
    padding-bottom: 5em;
    border: 1px solid $color-theme;
    background-color: #fff;
    border-radius: 5px;
    text-align: center;

    &__heading {
        color: $color-keynote-speaker__heading;
    }

    &__body {
        text-align: left;
        padding: 4% 8%;
        color:#686868;
    }

    &__name {
        @include roboto-medium;
        color: $color-theme;
        font-size: 24px;
    }

    &__photo {
        width: $keynote-speaker-photo-size;
        height: $keynote-speaker-photo-size;
        position: relative;
        left: 50%;
        margin-top: $keynote-speaker-photo-size / -2;
        margin-left: $keynote-speaker-photo-size / -2;
        margin-bottom: 4em;
        border-radius: 50%;
        border: 3px solid $color-theme;
        background-color: white;
    }

    &__url {
        font-size: 14px;
        color: #82B3FF;
        margin-bottom: 4em;
        display: block;
    }
}

.footer {
    color: $color-theme;
    font-size: 16px;
    padding: 1.8em 2em;
    line-height: 40px;
}

.sponsors__logo {
    > a img{
        margin: 2em auto 4em;
        max-height: 60px;
    }
}

.social-btn {
    color: $color-theme;
    display: inline-block;
    padding: .2em 1em;
}

